[package]
name = "gtag-js-sys"
version = "0.1.0"
authors = ["Matthew Nicholson <matt@matt-land.com>"]
edition = "2018"
description = "A raw wrapper around Google's gtag.js framework."
license = "MIT/Apache-2.0"
categories = ["wasm"]
keywords = ["wasm", "gtag", "js"]
repository = "https://github.com/iamcodemaker/gtag-rs"


[dependencies]
wasm-bindgen = "0.2.58"
